cabal-version: 2.2

name: yuki
version: 0

build-type: Simple

executable yuki_bot
  build-depends:
    aeson,
    base,
    bytestring,
    containers,
    lens,
    persistent,
    persistent-template,
    persistent-sqlite,
    telegram-bot-simple,
    text,
    time,
    wreq,
    yaml,
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TypeApplications
    TypeFamilies
  default-language: Haskell2010
  main-is: Main.hs
  other-modules: HTTP
